Fix broken style
Iframe source no longer points to actual chat hence it is impossible to detect if chat replay is enabled.

--- a/src/content/top/top.css
+++ b/src/content/top/top.css
@@ -3,7 +3,7 @@
   position: static !important;
 }
 
-[fullscreen] .overlay #chat:not(:has(#chatframe[src="about:blank"])) {
+[fullscreen] .overlay #chat {
   --player-bar: 60px;
   --min-height-ratio: 0.3;
   --total-margin-ratio: calc(1 - var(--min-height-ratio));
